@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with items not getting restored when breaking and placing blocks
+
 1.18-4.0.3:
 - Fixed another spot where the shield was not working below 0
 
